[package]

name = "rust-windows"
version = "0.0.1"
authors = ["klutzy <https://github.com/klutzy>",
		   "Gigih Aji Ibrahim <https://github.com/bungcip>",
		   "Pål-Kristian Engstad <https://github.com/engstad>",
		   "Kang Seonghoon <https://github.com/lifthrasiir>",
		   "Peter Reid <https://github.com/PeterReid>"]
tags = []

[lib]
name = "rust_windows"

[dependencies]
gdi32-sys = "*"
kernel32-sys = "*"
user32-sys = "*"
winapi = "*"
log="*"
