[package]

name = "examples"
version = "0.0.1"
authors = [
	"klutzy <https://github.com/klutzy>",
	"Gigih Aji Ibrahim <https://github.com/bungcip>",
	"Pål-Kristian Engstad <https://github.com/engstad>",
	"Kang Seonghoon <https://github.com/lifthrasiir>",
	"Peter Reid <https://github.com/PeterReid>"
]

[[bin]]
name = "hello"
path = "src/hello.rs"

[dependencies.rust-windows]
path = ".."

[dependencies]
winapi = "*"
log = "*"
